--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 /.build
+# But DO track the specific executable
+!/.build/debug/mcp-server-macos-use
 /Packages
 xcuserdata/
 DerivedData/
